force-app/main/default/objects/Clinic_Organizer__c/Clinic_Organizer__c.object-meta.xml
<CustomObject>
    <description>Informações sobre o responsável pela organização da clínica ou evento.</description>
    <label>Organizador da Clínica</label>
    <nameField>
        <label>Nome do Organizador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizadores da Clínica</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>