force-app/main/default/objects/Clinic_Organizer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Endereço associado ao organizador, vinculado a um registro de localização existente.</description>
    <inlineHelpText>Busque e selecione um endereço previamente cadastrado. Caso não exista, avalie a criação de um novo registro de localização.</inlineHelpText>
    <label>Endereço</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Organizadores da Clínica</relationshipLabel>
    <relationshipName>Clinic_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>