force-app/main/default/objects/Clinic_Organizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <description>Endereço de e-mail alternativo do organizador.</description>
    <inlineHelpText>Forneça um e-mail secundário para contato, caso o principal não esteja disponível.</inlineHelpText>
    <label>Email Alternativo</label>
    <type>Email</type>
</CustomField>