force-app/main/default/objects/Clinic_Organizer__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description>Número de telefone alternativo do organizador.</description>
    <inlineHelpText>Informe um número secundário para contato em caso de indisponibilidade do principal.</inlineHelpText>
    <label>Telefone Alternativo</label>
    <type>Phone</type>
</CustomField>