force-app/main/default/objects/Clinic_Organizer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Endereço de e-mail principal do organizador.</description>
    <inlineHelpText>Informe um e-mail válido e ativo para comunicações principais.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>