force-app/main/default/objects/Clinic_Organizer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Número de telefone principal do organizador.</description>
    <inlineHelpText>Inclua o número com código do país e DDD para contato direto.</inlineHelpText>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>